--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "homepage": "https://deeplink.subwallet.app",
   "private": false,
   "dependencies": {
+    "@polkadot/phishing": "^0.18.10",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
